# file-player-plugin

./: .gitignore  CMakeLists.txt  README.md  clap-wrapper.patch
.github/workflows/: build.yml
cmake/: ClapLibs.cmake  FindJaiCompiler.cmake  JuceLib.cmake
src/: CMakeLists.txt  clap_plugin.h  clap_plugin.tpp  file_player_editor.cpp  file_player_editor.h  file_player_plugin.cpp  file_player_plugin.h  plugin_editor.cpp  plugin_editor.h  plugin_editor.mm  plugin_entry.cpp
src/gui/: file_player_editor.cpp  file_player_editor.h  param_slider.cpp  param_slider.h  plugin_editor.cpp  plugin_editor.h  plugin_editor.mm
src/jai/: CMakeLists.txt  JaiContext.cpp  JaiContext.h  build.jai
src/jai/src/: audio_ports.jai  interpolation.jai  params.jai  player.jai  plugin.jai  process.jai
